aarch32-tests/tests/snapshots/versatileab/abt-exception-a32-armv4t-none-eabi.snap
---
source: qemu-tests/tests/tests.rs
expression: stdout
---
Hello, this is an data abort exception example
data abort occurred
caught unaligned_from_a32
Doing it again
data abort occurred
caught unaligned_from_a32
Skipping instruction
Recovered from fault OK!
