aarch32-tests/tests/snapshots/versatileab/abt-exception-a32-thumbv6-none-eabi.snap
---
source: qemu-tests/tests/tests.rs
expression: stdout
---
Hello, this is an data abort exception example
data abort occurred
DFSR (Fault Status Register): Dfsr { wnr: false, domain: 0, status: Ok(AlignmentFault) }
caught fault on COUNTER
caught unaligned_from_a32
Doing it again
data abort occurred
DFSR (Fault Status Register): Dfsr { wnr: false, domain: 0, status: Ok(AlignmentFault) }
caught fault on COUNTER
caught unaligned_from_a32
Skipping instruction
Recovered from fault OK!
