aarch32-tests/tests/snapshots/versatileab/fast-interrupt-thumbv7r-none-eabihf.snap
---
source: qemu-tests/tests/tests.rs
expression: stdout
---
Setting up interrupts...
Firing interrupt...
Got interrupted :)
