aarch32-tests/tests/snapshots/versatileab/fpu-test-armv6-none-eabi.snap
---
source: qemu-tests/tests/tests.rs
expression: stdout
---
Sine wave test (f32)...
( 0.0000) ..............................o
( 0.1253) .................................o
( 0.2487) .....................................o
( 0.3681) .........................................o
( 0.4818) ............................................o
( 0.5878) ...............................................o
( 0.6845) ..................................................o
( 0.7705) .....................................................o
( 0.8443) .......................................................o
( 0.9048) .........................................................o
( 0.9511) ..........................................................o
( 0.9823) ...........................................................o
( 0.9980) ...........................................................o
( 0.9980) ...........................................................o
( 0.9823) ...........................................................o
( 0.9511) ..........................................................o
( 0.9048) .........................................................o
( 0.8443) .......................................................o
( 0.7705) .....................................................o
( 0.6845) ..................................................o
( 0.5878) ...............................................o
( 0.4818) ............................................o
( 0.3681) .........................................o
( 0.2487) .....................................o
( 0.1253) .................................o
(-0.0000) .............................o
(-0.1253) ..........................o
(-0.2487) ......................o
(-0.3681) ..................o
(-0.4818) ...............o
(-0.5878) ............o
(-0.6845) .........o
(-0.7705) ......o
(-0.8443) ....o
(-0.9048) ..o
(-0.9511) .o
(-0.9823) o
(-0.9980) o
(-0.9980) o
(-0.9823) o
(-0.9511) .o
(-0.9048) ..o
(-0.8443) ....o
(-0.7705) ......o
(-0.6845) .........o
(-0.5878) ............o
(-0.4818) ...............o
(-0.3681) ..................o
(-0.2487) ......................o
(-0.1253) ..........................o
( 0.0000) ..............................o
( 0.1253) .................................o
( 0.2487) .....................................o
( 0.3681) .........................................o
( 0.4818) ............................................o
( 0.5878) ...............................................o
( 0.6845) ..................................................o
( 0.7705) .....................................................o
( 0.8443) .......................................................o
( 0.9048) .........................................................o
( 0.9511) ..........................................................o
( 0.9823) ...........................................................o
( 0.9980) ...........................................................o
( 0.9980) ...........................................................o
( 0.9823) ...........................................................o
( 0.9511) ..........................................................o
( 0.9048) .........................................................o
( 0.8443) .......................................................o
( 0.7705) .....................................................o
( 0.6845) ..................................................o
( 0.5878) ...............................................o
( 0.4818) ............................................o
( 0.3681) .........................................o
( 0.2487) .....................................o
( 0.1253) .................................o
(-0.0000) ..............................o
(-0.1253) ..........................o
(-0.2487) ......................o
(-0.3681) ..................o
(-0.4818) ...............o
(-0.5878) ............o
(-0.6845) .........o
(-0.7705) ......o
(-0.8443) ....o
(-0.9048) ..o
(-0.9511) .o
(-0.9823) o
(-0.9980) o
(-0.9980) o
(-0.9823) o
(-0.9511) .o
(-0.9048) ..o
(-0.8443) ....o
(-0.7705) ......o
(-0.6845) .........o
(-0.5878) ............o
(-0.4818) ...............o
(-0.3681) ..................o
(-0.2487) ......................o
(-0.1253) ..........................o
Sine wave test (f64)...
( 0.0000) ..............................o
( 0.1253) .................................o
( 0.2487) .....................................o
( 0.3681) .........................................o
( 0.4818) ............................................o
( 0.5878) ...............................................o
( 0.6845) ..................................................o
( 0.7705) .....................................................o
( 0.8443) .......................................................o
( 0.9048) .........................................................o
( 0.9511) ..........................................................o
( 0.9823) ...........................................................o
( 0.9980) ...........................................................o
( 0.9980) ...........................................................o
( 0.9823) ...........................................................o
( 0.9511) ..........................................................o
( 0.9048) .........................................................o
( 0.8443) .......................................................o
( 0.7705) .....................................................o
( 0.6845) ..................................................o
( 0.5878) ...............................................o
( 0.4818) ............................................o
( 0.3681) .........................................o
( 0.2487) .....................................o
( 0.1253) .................................o
(-0.0000) .............................o
(-0.1253) ..........................o
(-0.2487) ......................o
(-0.3681) ..................o
(-0.4818) ...............o
(-0.5878) ............o
(-0.6845) .........o
(-0.7705) ......o
(-0.8443) ....o
(-0.9048) ..o
(-0.9511) .o
(-0.9823) o
(-0.9980) o
(-0.9980) o
(-0.9823) o
(-0.9511) .o
(-0.9048) ..o
(-0.8443) ....o
(-0.7705) ......o
(-0.6845) .........o
(-0.5878) ............o
(-0.4818) ...............o
(-0.3681) ..................o
(-0.2487) ......................o
(-0.1253) ..........................o
( 0.0000) ..............................o
( 0.1253) .................................o
( 0.2487) .....................................o
( 0.3681) .........................................o
( 0.4818) ............................................o
( 0.5878) ...............................................o
( 0.6845) ..................................................o
( 0.7705) .....................................................o
( 0.8443) .......................................................o
( 0.9048) .........................................................o
( 0.9511) ..........................................................o
( 0.9823) ...........................................................o
( 0.9980) ...........................................................o
( 0.9980) ...........................................................o
( 0.9823) ...........................................................o
( 0.9511) ..........................................................o
( 0.9048) .........................................................o
( 0.8443) .......................................................o
( 0.7705) .....................................................o
( 0.6845) ..................................................o
( 0.5878) ...............................................o
( 0.4818) ............................................o
( 0.3681) .........................................o
( 0.2487) .....................................o
( 0.1253) .................................o
(-0.0000) .............................o
(-0.1253) ..........................o
(-0.2487) ......................o
(-0.3681) ..................o
(-0.4818) ...............o
(-0.5878) ............o
(-0.6845) .........o
(-0.7705) ......o
(-0.8443) ....o
(-0.9048) ..o
(-0.9511) .o
(-0.9823) o
(-0.9980) o
(-0.9980) o
(-0.9823) o
(-0.9511) .o
(-0.9048) ..o
(-0.8443) ....o
(-0.7705) ......o
(-0.6845) .........o
(-0.5878) ............o
(-0.4818) ...............o
(-0.3681) ..................o
(-0.2487) ......................o
(-0.1253) ..........................o
