aarch32-tests/tests/snapshots/versatileab/generic-timer-thumbv7a-none-eabihf.snap
---
source: aarch32-tests/tests/tests.rs
expression: stdout
---
cntfrq = 62.500 MHz
Using physical timer ************************
Print five, every 100ms...
i = 0
i = 1
i = 2
i = 3
i = 4
Waiting for 31250000 physical ticks to count up...
Matched! physical
Waiting for 31250000 physical ticks to count down...
physical countdown hit zero!
Using virtual timer ************************
Print five, every 100ms...
i = 0
i = 1
i = 2
i = 3
i = 4
Waiting for 31250000 virtual ticks to count up...
Matched! virtual
Waiting for 31250000 virtual ticks to count down...
virtual countdown hit zero!
